--- a/pages/talks.html
+++ b/pages/talks.html
@@ -110,7 +110,8 @@
         <div class="page">
   <h1 class="page-title">Talks</h1>
   <ul>
-<li><a href="http://simonmar.github.io/slides/Haskell%20in%20the%20datacentre.pdf">Haskell in the datacentre</a> (FHPC’17)</li>
+<li>Video: <a href="https://www.youtube.com/watch?v=sT6VJkkhy0o">Haxl: A Big Hammer for Concurrency</a> (Strange Loop 2017)</li>
+<li>Slides: <a href="http://simonmar.github.io/slides/Haskell%20in%20the%20datacentre.pdf">Haskell in the datacentre</a> (FHPC’17)</li>
 </ul>
 </div>
 
