--- a/pages/pcph.html
+++ b/pages/pcph.html
@@ -111,8 +111,12 @@
   <h1 class="page-title">Parallel and Concurrent Programming in Haskell</h1>
   <p><a href="http://chimera.labs.oreilly.com/books/1230000000929"> <img src="../images/cover.png" /> </a></p>
 <p>The book was published in August 2013 by O’Reilly Media.</p>
-<a href="http://chimera.labs.oreilly.com/books/1230000000929/index.html">Read the book online</a>
-</p>
+<p>Unfortunately the online copy of the book is temporarily unavailable as O’Reilly have deprecated the platform that was hosting it. I hope to get the content back up in some form in the future, in the meantime you can find it on <a href="https://web.archive.org/web/20180117182938/http://chimera.labs.oreilly.com/books/1230000000929/index.html">archive.org</a>.</p>
+<!--
+<a
+href="http://chimera.labs.oreilly.com/books/1230000000929/index.html">Read
+the book online</a></p>
+-->
 <h2 id="where-to-buy">Where to buy</h2>
 <ul>
 <li>Paperback
