--- a/pages/talks.html
+++ b/pages/talks.html
@@ -110,6 +110,8 @@
         <div class="page">
   <h1 class="page-title">Talks</h1>
   <ul>
+<li>Slides: <a href="http://simonmar.github.io/slides/Haskell%20in%20the%20datacentre%20%28Copenhagen%20April%202019%29.pdf">Haskell in the datacentre</a> (Copenhagen April 2019)</li>
+<li>Slides: <a href="http://simonmar.github.io/slides/Selective%20Applicative%20Functors%20%28Copenhagen%20April%202019%29.pdf">Selective Applicative Functors</a> (Copenhagen April 2019)</li>
 <li>Video: <a href="https://www.youtube.com/watch?v=sT6VJkkhy0o">Haxl: A Big Hammer for Concurrency</a> (Strange Loop 2017)</li>
 <li>Slides: <a href="http://simonmar.github.io/slides/Haskell%20in%20the%20datacentre.pdf">Haskell in the datacentre</a> (FHPC’17)</li>
 </ul>
